--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,17 @@
     <string name="profile">Profile</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="play_now_button">Play now</string>
+    <string name="additional_information">Additional Information</string>
+    <string name="developer">Developer</string>
+    <string name="publisher">Publisher</string>
+    <string name="platform">Platform</string>
+    <string name="release_date">Release Date</string>
+    <string name="genre">Genre</string>
+    <string name="minimum_system_requirements">Minimum System Requirements</string>
+    <string name="os">OS</string>
+    <string name="processor">Processor</string>
+    <string name="storage">Storage</string>
+    <string name="memory">Memory</string>
+    <string name="graphics">Graphics</string>
 </resources>
