--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,6 @@
     <string name="games">Games</string>
     <string name="play_later">Play Later</string>
     <string name="profile">Profile</string>
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="play_now_button">Play now</string>
     <string name="additional_information">Additional Information</string>
@@ -19,4 +18,14 @@
     <string name="storage">Storage</string>
     <string name="memory">Memory</string>
     <string name="graphics">Graphics</string>
+    <string name="error_title">Oopss!</string>
+    <string name="error_message">Something went wrong, please try again later</string>
+    <string name="error_refresh">Try Again</string>
+    <string name="guest_name">Guest</string>
+    <string name="edit_button">Edit Profile</string>
+    <string name="edit_photo_button">Take new profile picture</string>
+    <string name="name">Name</string>
+    <string name="email">Email</string>
+    <string name="save_profile">Save profile</string>
+    <string name="guest_email">guest@hotmai.com</string>
 </resources>
